Wrap abstract text

--- a/abstract.tex
+++ b/abstract.tex
@@ -18,8 +18,23 @@
 
 
 \begin{abstract}
-Vertical Axis Turbines (VAWT) have been used for extracting of energy either from sea or wind. A simpler design, low cost of maintenance and the capability of working independent from the direction of the flow are some of the most important advantages over conventional Horizontal Axis Turbines (HAWTs). Complex and unsteady fluid dynamics are not easy to model for simulation tools. One of the most relevant phenomena is the dynamic stall which is inherently to unsteady conditions, this work is focused in its study.
-Dynamic stall is usually used as a passive control for VAWT operating conditions, hence the importance of a good understanding. In this study, \textbf{a coupled model is implemented with the open-source CFD toolbox OpenFOAM for solving the governing equations; an actuator line model is used for solving velocity flow field and a dynamic stall model for force interactions.} Force coefficients obtained from the model are validated with experimental data of pithing airfoil in similar operating conditions as H-rotor type.
+
+    Vertical Axis Turbines (VAWT) have been used for extracting of energy either
+    from sea or wind. A simpler design, low cost of maintenance and the
+    capability of working independent from the direction of the flow are some of
+    the most important advantages over conventional Horizontal Axis Turbines
+    (HAWTs). Complex and unsteady fluid dynamics are not easy to model for
+    simulation tools. One of the most relevant phenomena is the dynamic stall
+    which is inherently to unsteady conditions, this work is focused in its
+    study. Dynamic stall is usually used as a passive control for VAWT operating
+    conditions, hence the importance of a good understanding. In this study,
+    \textbf{a coupled model is implemented with the open-source CFD toolbox
+    OpenFOAM for solving the governing equations; an actuator line model is used
+    for solving velocity flow field and a dynamic stall model for force
+    interactions.} Force coefficients obtained from the model are validated with
+    experimental data of pithing airfoil in similar operating conditions as
+    H-rotor type. 
+
 \end{abstract}
 
 
