Wrap text in introduction

--- a/abstract.tex
+++ b/abstract.tex
@@ -33,15 +33,29 @@
     for solving velocity flow field and a dynamic stall model for force
     interactions.} Force coefficients obtained from the model are validated with
     experimental data of pithing airfoil in similar operating conditions as
-    H-rotor type. 
+    H-rotor type.
 
 \end{abstract}
 
 
 
 \section{Introduction}
-Operating conditions of VAWT are characterized for complex unsteady flows which give a considerable challenge for both to describe using measurements and to represent through simulation tools\cite{huyer1996unsteady}. Moreover, VAWT blades are inherently exposed to cyclic variation in the angle of attack which gives cyclic blade forces and can give material fatigue damage. Accurate modeling of the varying forces is therefore very important for the design of VAWT.\\
-The angle of attack in a fixed pitch VAWT is increasing with decreased tip speed ration (TSR), and at low TSR (common during stall regulation), the blades will experience dynamic stall, where the force coefficients for the blade not only depend on the angle of attack, but also on the rate of change of the angle of attack. The aim of this study is to investigate the performance of a Leishman-Beddoes type dynamic stall model when implemented within an actuator line model, for pitching motion typical to a VAWT.
+
+Operating conditions of VAWT are characterized for complex unsteady flows which
+give a considerable challenge for both to describe using measurements and to
+represent through simulation tools\cite{huyer1996unsteady}. Moreover, VAWT
+blades are inherently exposed to cyclic variation in the angle of attack which
+gives cyclic blade forces and can give material fatigue damage. Accurate
+modeling of the varying forces is therefore very important for the design of
+VAWT.
+
+The angle of attack in a fixed pitch VAWT is increasing with decreased tip speed
+ration (TSR), and at low TSR (common during stall regulation), the blades will
+experience dynamic stall, where the force coefficients for the blade not only
+depend on the angle of attack, but also on the rate of change of the angle of
+attack. The aim of this study is to investigate the performance of a
+Leishman-Beddoes type dynamic stall model when implemented within an actuator
+line model, for pitching motion typical to a VAWT.
 
 
 \section{Methodology}
