--- a/paper.tex
+++ b/paper.tex
@@ -59,27 +59,69 @@ line model, for pitching motion typical to a VAWT.
 
 
 \section{Methodology}
-For solving the governing equations of phenomena involved, a coupled model have been implemented: the actuator line model is used to calculate the flow velocities and thereby the angle of attack. The dynamic stall model is used to calculate blade force coefficients, which the actuator line model need for the velocity field calculations. In this work it was chosen to validate the model against wind tunnel data for a pitching blade. This will put the focus on the force modeling part in the simulation model\\
-\\
-\textbf{Actuator Line Model:} is a three-dimensional and unsteady aerodynamic model developed by S{\o}rensen and Shen\cite{sorensen1999computation}, used to study the flow around wind turbines. It is a combination of a solver of Navier-Stokes equations with a so-called actuator line technique, in which blades of the turbine are represented by a radial distribution of body forces along lines. These forces are determined using a dynamic stall model commonly based on empirical data.\\
-\\
-\textbf{Dynamic Stall Modeling:} represented by the Leishman-Beddoes model\cite{leishman1986generalised} with the modifications of Sheng et al\cite{sheng2008modified}. It is capable to calculate the unsteady lift, pitching moment and drag, giving a physical description of the aerodynamics. It have been widely validated with experimental data\cite{leishman1989semi}. Separated on three subsystems: an attached flow model for unsteady linear airloads, a separated flow model for non-linear airloads and a dynamic stall model for the airloads induced by the leading edge vortex. In this work, the dynamic stall model described by Dyachuk\cite{dyachuk} has been implemented, using the library turbinesFoam developed by Bachant\cite{bachant2015simulating}.\\
-\\
-NACA0021 airfoil was tested at the Reynolds number of 1000000 (which is a reasonable value for operating VAWT) during pithing motion similar to the motion of the VAWT blade. Different amplitude degrees were tried out. In a VAWT with fixed blades the angle of attack is in function of the TSR of the turbine. A periodic function is used to represent the variations of the angles of attack which a VAWT blade experiences analog to the pitching motion,
+
+For solving the governing equations of phenomena involved, a coupled model have
+been implemented: the actuator line model is used to calculate the flow
+velocities and thereby the angle of attack. The dynamic stall model is used to
+calculate blade force coefficients, which the actuator line model need for the
+velocity field calculations. In this work it was chosen to validate the model
+against wind tunnel data for a pitching blade. This will put the focus on the
+force modeling part in the simulation model.
+
+\textbf{Actuator Line Model:} is a three-dimensional and unsteady aerodynamic
+model developed by S{\o}rensen and Shen\cite{sorensen1999computation}, used to
+study the flow around wind turbines. It is a combination of a solver of
+Navier-Stokes equations with a so-called actuator line technique, in which
+blades of the turbine are represented by a radial distribution of body forces
+along lines. These forces are determined using a dynamic stall model commonly
+based on empirical data.
+
+\textbf{Dynamic Stall Modeling:} represented by the Leishman-Beddoes
+model\cite{leishman1986generalised} with the modifications of Sheng et
+al\cite{sheng2008modified}. It is capable to calculate the unsteady lift,
+pitching moment and drag, giving a physical description of the aerodynamics. It
+have been widely validated with experimental data\cite{leishman1989semi}.
+Separated on three subsystems: an attached flow model for unsteady linear
+airloads, a separated flow model for non-linear airloads and a dynamic stall
+model for the airloads induced by the leading edge vortex. In this work, the
+dynamic stall model described by Dyachuk\cite{dyachuk} has been implemented,
+using the library turbinesFoam developed by Bachant\cite{bachant2015simulating}.
+
+NACA0021 airfoil was tested at the Reynolds number of 1000000 (which is a
+reasonable value for operating VAWT) during pithing motion similar to the motion
+of the VAWT blade. Different amplitude degrees were tried out. In a VAWT with
+fixed blades the angle of attack is in function of the TSR of the turbine. A
+periodic function is used to represent the variations of the angles of attack
+which a VAWT blade experiences analog to the pitching motion,
 \begin{eqnarray}
-\alpha = \arctan \left( \frac{\sin \theta}{\lambda + \cos \theta} \right)
+    \alpha = \arctan \left( \frac{\sin \theta}{\lambda + \cos \theta} \right)
 \end{eqnarray}
 Where $\theta$ is the azimuthal blade angle and $ \lambda $ represents the TSR,
 \begin{eqnarray}
-\lambda =  \frac{\Omega R}{V}
+    \lambda =  \frac{\Omega R}{V}
 \end{eqnarray}
-The pitching blade experiments were carried out at Glasgow University\cite{angell1988collected}\\
+The pitching blade experiments were carried out at Glasgow
+University\cite{angell1988collected}\\
+
 
 \section{Results and discussion}
-The reliability of the model results is acceptable, making a good agreement with experimental results considering the complexity of the flows studied. For a TSR of 3.34 (Figure \ref{fig1}), the maximum magnitude of the angle of attack is at 17.4\degree which is in the stall region. Both CN and CT curves show the delay of the flow reattachment, which is characteristic of the dynamic stall phenomenon. Peaks of simulated values have close agreement with the measured data.\\
-For a TSR of 2.60, the maximum amplitude of the angle of attack is 22.6, which is related to a deeper stall region compared to a TSR of 3.34. This is shown because the "loop" of the curve is wider for the lower TSR, and moreover, the reattachment of the flow is further delayed.\\
-It have been demonstrated how the coupled actuator line model can be coupled to a modified version of the Leishman-Beddoes model, and the results could be validated for similar operating conditions of a VAWT.
 
+The reliability of the model results is acceptable, making a good agreement with
+experimental results considering the complexity of the flows studied. For a TSR
+of 3.34 (Figure \ref{fig1}), the maximum magnitude of the angle of attack is at
+17.4\degree which is in the stall region. Both CN and CT curves show the delay
+of the flow reattachment, which is characteristic of the dynamic stall
+phenomenon. Peaks of simulated values have close agreement with the measured
+data.
+
+For a TSR of 2.60, the maximum amplitude of the angle of attack is 22.6, which
+is related to a deeper stall region compared to a TSR of 3.34. This is shown
+because the ``loop'' of the curve is wider for the lower TSR, and moreover, the
+reattachment of the flow is further delayed.
+
+It has been demonstrated how the coupled actuator line model can be coupled to
+a modified version of the Leishman-Beddoes model, and the results could be
+validated for similar operating conditions of a VAWT.
 
 
 \begin{figure}[h]
