Tweak title a little

--- a/paper.tex
+++ b/paper.tex
@@ -8,7 +8,9 @@
 
 \begin{document}
 
-\title{Validation of an Actuator Line Model Coupled to a Dynamic Stall Model for Pitching Motion Characteristic to Vertical Axis Turbine} % \\ \jpcs}
+\title{Validation of an Actuator Line Model Coupled to a Dynamic Stall Model for
+Pitching Motions Characteristic to Vertical Axis Turbines} 
+
 \author{Victor Mendoza$^{1}$, Peter Bachant$^{2}$, Martin Wosnik$^{2}$ and Anders Goude$^{1}$ }
 \address{$^{1}$ Department of Engineering Sciences, Division of Electricity, Uppsala University, \\Uppsala 751 21, Sweden}
 \address{$^{2}$ Center for Ocean Renewable Energy, University of New Hampshire, 24 Colovos Rd.,\\ Durham, NH 03824, USA}
