new script with new figures

--- a/paper.tex
+++ b/paper.tex
@@ -109,10 +109,12 @@ University\cite{angell1988collected}.\\
 
 \begin{figure}[h]
 \begin{minipage}{18pc}
-\includegraphics[width=18pc]{Fig1.png}
+%\includegraphics[width=18pc]{Fig1.png}
+\resizebox{\columnwidth}{!}{\input{CN1}}
 \end{minipage}\hspace{2pc}%
 \begin{minipage}{18pc}
-\includegraphics[width=18pc]{Fig2.png}
+%\includegraphics[width=18pc]{Fig2.png}
+\resizebox{\columnwidth}{!}{\input{CT1}}
 \end{minipage}
 \caption{\label{fig1}Normal (left) and tangential (right) force coefficients during pitching motions of NACA0021 airfoil with a maximum amplitude of 17.4\degree\ (analog to $\lambda = 3.34$).}
 \end{figure}
@@ -120,10 +122,12 @@ University\cite{angell1988collected}.\\
 
 \begin{figure}[h]
 \begin{minipage}{18pc}
-\includegraphics[width=18pc]{Fig3.png}
+%\includegraphics[width=18pc]{Fig3.png}
+\resizebox{\columnwidth}{!}{\input{CN2}}
 \end{minipage}\hspace{2pc}%
 \begin{minipage}{18pc}
-\includegraphics[width=18pc]{Fig4.png}
+%\includegraphics[width=18pc]{Fig4.png}
+\resizebox{\columnwidth}{!}{\input{CT2}}
 \end{minipage}
 \caption{\label{fig2}Normal (left) and tangential (right) force coefficients during pitching motions of NACA0021 airfoil with a maximum amplitude of 22.6\degree\ (analog to $\lambda = 2.60$).}
 \end{figure}
