Clean up abstract wording a bit

--- a/paper.tex
+++ b/paper.tex
@@ -20,22 +20,23 @@ Pitching Motions Characteristic to Vertical Axis Turbines}
 
 \begin{abstract}
 
-    Vertical Axis Wind Turbines (VAWTs) have been used for extracting of energy
-    either from sea or wind. A simpler design, low cost of maintenance and the
-    capability of working independent from the direction of the flow are some of
-    the most important advantages over conventional Horizontal Axis Wind
-    Turbines (HAWTs). Complex and unsteady fluid dynamics are not easy to model
-    for simulation tools. One of the most relevant phenomena is the dynamic
-    stall which is inherently to unsteady conditions, this work is focused in
-    its study. Dynamic stall is usually used as a passive control for VAWT
-    operating conditions, hence the importance of a good understanding. In this
-    study, \textbf{a coupled model is implemented with the open-source CFD
-    toolbox OpenFOAM for solving the governing equations; an actuator line model
-    is used for solving velocity flow field and a dynamic stall model for force
-    interactions.} Force coefficients obtained from the model are validated with
+    Vertical axis turbines (VATs) can be used to extract renewable energy from
+    wind or water flows. A simpler design, low cost of maintenance, and the
+    ability to accept flow from all directions perpendiculat to the rotor axis
+    are some of the most important advantages over conventional horizontal axis
+    turbines (HATs). However, VATs encounter complex and unsteady fluid
+    dynamics, which present significant modeling challenges. One of the most
+    relevant phenomena is dynamic stall, which is caused by the unsteady
+    variation of angle of attack throughout the blade rotation, and is the focus
+    of the present study. Dynamic stall is usually used as a passive control for
+    VAT operating conditions, hence the importance of predicting its effects. In
+    this study, \textbf{a coupled model is implemented with the open-source CFD
+    toolbox OpenFOAM for solving the Navier--Stokes equations, where an actuator
+    line model and dynamic stall model are used compute the blade loading and
+    body force.} Force coefficients obtained from the model are validated with
     experimental data of pithing airfoil in similar operating conditions as
     H-rotor type. Numerical results show reasonable agreement with experimental
-    data for pitching motion. 
+    data for pitching motion.
 
 \end{abstract}
 
