Clarify that an H-rotor is a VAT

--- a/paper.tex
+++ b/paper.tex
@@ -34,9 +34,9 @@ Pitching Motions Characteristic to Vertical Axis Turbines}
     toolbox OpenFOAM for solving the Navier--Stokes equations, where an actuator
     line model and dynamic stall model are used compute the blade loading and
     body force.} Force coefficients obtained from the model are validated with
-    experimental data of pithing airfoil in similar operating conditions as
-    H-rotor type. Numerical results show reasonable agreement with experimental
-    data for pitching motion.
+    experimental data of pithing airfoil in similar operating conditions as an
+    H-rotor type VAT. Numerical results show reasonable agreement with
+    experimental data for pitching motion.
 
 \end{abstract}
 
