--- a/paper.tex
+++ b/paper.tex
@@ -22,7 +22,7 @@ Pitching Motions Characteristic to Vertical Axis Turbines}
 
     Vertical axis turbines (VATs) can be used to extract renewable energy from
     wind or water flows. A simpler design, low cost of maintenance, and the
-    ability to accept flow from all directions perpendiculat to the rotor axis
+    ability to accept flow from all directions perpendicular to the rotor axis
     are some of the most important advantages over conventional horizontal axis
     turbines (HATs). However, VATs encounter complex and unsteady fluid
     dynamics, which present significant modeling challenges. One of the most
